--- a/BoyumFoosballStats-2.0/Pages/MatchHistory/MatchHistory.razor
+++ b/BoyumFoosballStats-2.0/Pages/MatchHistory/MatchHistory.razor
@@ -1,6 +1,6 @@
 ﻿@page "/MatchHistory"
 
-<MudContainer MaxWidth="MaxWidth.Large" Class="mt-5">
+<MudContainer MaxWidth="MaxWidth.Large" Class="mt-5 px-0 px-sm-6">
     <MudTable Items="@Matches" Bordered="false" Outlined="false" Dense="true" Breakpoint="Breakpoint.None">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Match history</MudText>
@@ -28,31 +28,27 @@
             </MudTh>
         </HeaderContent>
         <RowTemplate>
-            <MudTd DataLabel="@nameof(Match.GreyDefenderPlayer)">
+            <MudTd DataLabel="@nameof(Match.GreyDefenderPlayer)" Class="border-0 border-sm">
                 <div class="d-flex w-100 flex-column align-end">
-                    <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Security" IconColor="Color.Primary">@context.GreyDefenderPlayer!.Name</MudButton>
-                    <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Bolt" IconColor="Color.Primary">@context.GreyAttackerPlayer!.Name</MudButton>
+                    <MudButton Variant="Variant.Text" Class="normal-case" EndIcon="@Icons.Material.Filled.Security" IconColor="Color.Primary">@context.GreyDefenderPlayer!.Name</MudButton>
+                    <MudButton Variant="Variant.Text" Class="normal-case" EndIcon="@Icons.Material.Filled.Bolt" IconColor="Color.Primary">@context.GreyAttackerPlayer!.Name</MudButton>
                 </div>
-                @* <div class="mt-5"> *@
-                @*     <MudIcon Size="Size.Small" Icon="@Icons.Custom.Uncategorized.Radioactive" Color="Color.Info" /> *@
-                @*     <MudText Inline="true" Align="Align.Start">@context.MatchDate.ToShortDateString()</MudText> *@
-                @* </div> *@
             </MudTd>
-            <MudTd>
+            <MudTd Class="border-0 border-sm">
                 <MudText Align="Align.Center">
                     <MudText Inline="true" Typo="Typo.button" Color="GetGreyScoreColor(context)">@context.ScoreGrey</MudText>
                     <MudText Inline="true" Typo="Typo.button"> - </MudText>
                     <MudText Inline="true" Typo="Typo.button" Color="GetBlackScoreColor(context)">@context.ScoreBlack</MudText>
                 </MudText>
             </MudTd>
-            <MudTd>
+            <MudTd Class="border-0 border-sm">
                 <div class="d-flex w-100 flex-column align-start">
-                    <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Security" IconColor="Color.Primary">@context.BlackDefenderPlayer!.Name</MudButton>
-                    <MudButton Variant="Variant.Text" StartIcon="@Icons.Material.Filled.Bolt" IconColor="Color.Primary">@context.BlackAttackerPlayer!.Name</MudButton>
+                    <MudButton Variant="Variant.Text" Class="normal-case" StartIcon="@Icons.Material.Filled.Security" IconColor="Color.Primary">@context.BlackDefenderPlayer!.Name</MudButton>
+                    <MudButton Variant="Variant.Text" Class="normal-case" StartIcon="@Icons.Material.Filled.Bolt" IconColor="Color.Primary">@context.BlackAttackerPlayer!.Name</MudButton>
                 </div>
             </MudTd>
             <MudTd DataLabel="@nameof(Match.MatchDate)" Class="d-none d-sm-table-cell">
-                <MudText Align="Align.Start">@context.MatchDate.ToString("ddd, d MMM, yyyy")</MudText>
+                <MudText Align="Align.Start" Typo="Typo.body2">@context.MatchDate.ToString("ddd, d MMM, yyyy")</MudText>
             </MudTd>
             <MudTd Class="d-none d-sm-table-cell">
                 <div class="w-100 d-flex justify-end">
@@ -60,6 +56,21 @@
                 </div>
             </MudTd>
         </RowTemplate>
+        <ChildRowContent>
+            <MudTr Class="d-table-row d-sm-none">
+                <td class="mud-table-cell">
+                    <MudText Class="d-block" Color="Color.Default" Align="Align.End" Typo="Typo.caption">@context.MatchDate.ToString("MMM d, yyyy")</MudText>
+                </td>
+                <td class="mud-table-cell">
+                    @* <MudDivider></MudDivider> *@
+                </td>
+                <td class="mud-table-cell">
+                    <div class="w-100 d-flex justify-end">
+                        <MudIconButton Class="ms-auto" Variant="Variant.Outlined" Icon="@Icons.Material.Filled.Delete" Color="Color.Default"/>
+                    </div>
+                </td>
+            </MudTr>
+        </ChildRowContent>
         <PagerContent>
             <MudTablePager/>
         </PagerContent>
