--- a/BoyumFoosballStats-2.0/Pages/MatchHistory/MatchHistory.razor
+++ b/BoyumFoosballStats-2.0/Pages/MatchHistory/MatchHistory.razor
@@ -1,7 +1,9 @@
 ﻿@page "/MatchHistory"
 
+@* <MudBreakpointProvider OnBreakpointChanged="HandleBreakpointChanged"/> *@
+
 <MudContainer MaxWidth="MaxWidth.Large" Class="mt-5 px-0 px-sm-6">
-    <MudTable Items="@Matches" Bordered="false" Outlined="false" Dense="true" Breakpoint="Breakpoint.None">
+    <MudTable Items="ViewModel.Matches" Bordered="false" Outlined="false" Dense="true" Breakpoint="Breakpoint.None">
         <ToolBarContent>
             <MudText Typo="Typo.h6">Match history</MudText>
         </ToolBarContent>
@@ -36,9 +38,9 @@
             </MudTd>
             <MudTd Class="border-0 border-b-sm">
                 <MudText Align="Align.Center">
-                    <MudText Inline="true" Typo="Typo.button" Color="GetGreyScoreColor(context)">@context.ScoreGrey</MudText>
+                    <MudText Inline="true" Typo="Typo.button" Color="ViewModel.GetGreyScoreColor(context)">@context.ScoreGrey</MudText>
                     <MudText Inline="true" Typo="Typo.button"> - </MudText>
-                    <MudText Inline="true" Typo="Typo.button" Color="GetBlackScoreColor(context)">@context.ScoreBlack</MudText>
+                    <MudText Inline="true" Typo="Typo.button" Color="ViewModel.GetBlackScoreColor(context)">@context.ScoreBlack</MudText>
                 </MudText>
             </MudTd>
             <MudTd Class="border-0 border-b-sm">
@@ -52,7 +54,7 @@
             </MudTd>
             <MudTd Class="d-none d-sm-table-cell">
                 <div class="w-100 d-flex justify-end">
-                    <MudIconButton Variant="Variant.Filled" Icon="@Icons.Material.Filled.Delete" Color="Color.Error"/>
+                    <MudIconButton Variant="Variant.Filled" Icon="@Icons.Material.Filled.Delete" OnClick="() => ViewModel.DeleteMatch(context)" Color="Color.Error"/>
                 </div>
             </MudTd>
         </RowTemplate>
@@ -65,13 +67,13 @@
                 </td>
                 <td class="mud-table-cell">
                     <div class="w-100 d-flex justify-end">
-                        <MudIconButton Class="ms-auto" Variant="Variant.Outlined" Icon="@Icons.Material.Filled.Delete" Color="Color.Default"/>
+                        <MudIconButton Class="ms-auto" Variant="Variant.Outlined" Icon="@Icons.Material.Filled.Delete" OnClick="() => ViewModel.DeleteMatch(context)" Color="Color.Default"/>
                     </div>
                 </td>
             </MudTr>
         </ChildRowContent>
         <PagerContent>
-            <MudTablePager/>
+            <MudTablePager HidePageNumber="ViewModel.ShouldHidePager" HideRowsPerPage="ViewModel.ShouldHidePager"/>
         </PagerContent>
     </MudTable>
 </MudContainer>
