radzen + win by last 5 weeks

--- a/BoyumFoosballStats/_Imports.razor
+++ b/BoyumFoosballStats/_Imports.razor
@@ -10,3 +10,6 @@
 @using BoyumFoosballStats.Shared
 @using BoyumFoosballStats.Shared.DbModels
 @using BoyumFoosballStats.Components.TeamCard
+@using Radzen
+@using Radzen.Blazor
+@using Variant = MudBlazor.Variant
