--- a/BoyumFoosballStats/Pages/_Host.cshtml
+++ b/BoyumFoosballStats/Pages/_Host.cshtml
@@ -15,6 +15,8 @@
     <base href="~/"/>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet"/>
     <link href="_content/MudBlazor/MudBlazor.min.css" rel="stylesheet"/>
+    <link href="_content/Radzen.Blazor/css/material-base.css" rel="stylesheet">
+    @* <link rel="stylesheet" href="_content/Radzen.Blazor/css/standard-base.css"> *@
     <link href="css/site.css" rel="stylesheet"/>
     @* <link href="BoyumFoosballStats_2.styles.css" rel="stylesheet"/> *@
 </head>
@@ -34,5 +36,6 @@
 
 <script src="_framework/blazor.server.js"></script>
 <script src="_content/MudBlazor/MudBlazor.min.js"></script>
+<script src="_content/Radzen.Blazor/Radzen.Blazor.js"></script>
 </body>
 </html>
