--- a/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
+++ b/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
@@ -13,7 +13,7 @@
                         <RadzenCategoryAxis>
                             <RadzenAxisTitle Text="Week number"/>
                         </RadzenCategoryAxis>
-                        <RadzenValueAxis Formatter="@ViewModel.FormatAsPercentage">
+                        <RadzenValueAxis Formatter="(percentage) => percentage.ToPercentageString()">
                             <RadzenGridLines Visible="true"/>
                             <RadzenAxisTitle Text="Win Rate (%)"/>
                         </RadzenValueAxis>
