--- a/BoyumFoosballStats/Shared/NavMenu.razor
+++ b/BoyumFoosballStats/Shared/NavMenu.razor
@@ -4,4 +4,5 @@
     </MudNavLink>
     <MudNavLink Href="ScoreCollection" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.Add">Score Collection</MudNavLink>
     <MudNavLink Href="MatchHistory" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.History">Match History</MudNavLink>
+    <MudNavLink Href="PlayerDashboard" Match="NavLinkMatch.Prefix" Icon="@Icons.Material.Filled.EmojiEvents">Player Dashboard</MudNavLink>
 </MudNavMenu>
