--- a/BoyumFoosballStats/Pages/OverviewDashboard/OverviewDashboard.razor
+++ b/BoyumFoosballStats/Pages/OverviewDashboard/OverviewDashboard.razor
@@ -1,20 +1,25 @@
 ﻿@page "/OverviewDashboard"
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-5">
     <MudGrid>
-        <MudItem xs="6">
+        <MudItem xs="12" Class="d-flex justify-center">
+            <MudSelect FullWidth="false" T="string" Value="ViewModel.SelectedSeason" SelectedValuesChanged="ViewModel.SeasonChanged" Clearable="true" Placeholder="All time">
+                @foreach (var season in ViewModel.AvailableSeasons)
+                {
+                    <MudSelectItem T="string" Value="@season"></MudSelectItem>
+                }
+            </MudSelect>
+        </MudItem>
+        <MudItem xs="12" lg="6">
             <MudPaper Elevation="3">
-                @if (ViewModel.WinRateMatchData.Any())
+                @if (ViewModel.WinRateChartData.Any())
                 {
                     <RadzenChart>
-                        <RadzenBarSeries Data="@ViewModel.WinRateMatchData" CategoryProperty="PlayerName" Title="Win Rate" ValueProperty="WinRate"
-                                         Fills="ViewModel.FillColors">
+                        <RadzenBarSeries Data="@ViewModel.WinRateChartData" CategoryProperty="Category" Title="Win Rate" ValueProperty="Value"
+                                         Fills="ViewModel.BarChartFillColors">
                             <RadzenSeriesDataLabels Visible="false"/>
                             <RadzenColumnOptions Margin="0"/>
                         </RadzenBarSeries >
                         <RadzenLegend Visible="false"/>
-                        <RadzenCategoryAxis>
-                            <RadzenAxisTitle Text="Player"/>
-                        </RadzenCategoryAxis>
                         <RadzenValueAxis Formatter="(percentage) => percentage.ToPercentageString()">
                             <RadzenGridLines Visible="true"/>
                             <RadzenAxisTitle Text="Win Rate (%)"/>
@@ -23,23 +28,36 @@
                 }
             </MudPaper>
         </MudItem>
-        <MudItem xs="6">
+        <MudItem xs="12" lg="6">
             <MudPaper Elevation="3">
-                @if (ViewModel.MatchesPlayedMatchData.Any())
+                @if (ViewModel.MatchesPlayedChartData.Any())
                 {
                     <RadzenChart>
-                        <RadzenBarSeries Data="@ViewModel.MatchesPlayedMatchData" CategoryProperty="PlayerName" Title="Matches Played" ValueProperty="MatchesPlayed"
-                                         Fills="ViewModel.FillColors">
+                        <RadzenBarSeries Data="@ViewModel.MatchesPlayedChartData" CategoryProperty="Category" Title="Matches Played" ValueProperty="Value"
+                                         Fills="ViewModel.BarChartFillColors">
                             <RadzenSeriesDataLabels Visible="false"/>
                             <RadzenColumnOptions Margin="0"/>
                         </RadzenBarSeries >
                         <RadzenLegend Visible="false"/>
-                        <RadzenCategoryAxis>
-                            <RadzenAxisTitle Text="Player"/>
-                        </RadzenCategoryAxis>
                         <RadzenValueAxis>
                             <RadzenGridLines Visible="true"/>
                             <RadzenAxisTitle Text="Matches Played"/>
+                        </RadzenValueAxis>
+                    </RadzenChart>
+                }
+            </MudPaper>
+        </MudItem>
+        <MudItem xs="12">
+            <MudPaper Elevation="3">
+                @if (ViewModel.TableSideWinRateChartData.Any())
+                {
+                    <RadzenChart>
+                        <RadzenPieSeries Data="ViewModel.TableSideWinRateChartData" Title="Win Rate (%)" CategoryProperty="Category" ValueProperty="Value"
+                                         Fills="ViewModel.PieChartFillColor">
+                            <RadzenLegend Visible="false"/>
+                            <RadzenSeriesDataLabels Visible="true"/>
+                        </RadzenPieSeries>
+                        <RadzenValueAxis Formatter="(percentage) => percentage.ToPercentageString()">
                         </RadzenValueAxis>
                     </RadzenChart>
                 }
