moved chart to component

--- a/BoyumFoosballStats/_Imports.razor
+++ b/BoyumFoosballStats/_Imports.razor
@@ -13,3 +13,5 @@
 @using Radzen
 @using Radzen.Blazor
 @using Variant = MudBlazor.Variant
+@using BoyumFoosballStats.Components.Charts
+@using BoyumFoosballStats.Components.TeamCard
