--- a/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
+++ b/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
@@ -1,5 +1,7 @@
 ﻿@page "/PlayerDashboard"
 @page "/PlayerDashboard/{PlayerId}"
+
+
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-6 px-0 px-sm-6">
     <MudGrid Justify="Justify.FlexEnd">
         @if (ViewModel.SelectedPlayer != null)
@@ -16,20 +18,7 @@
                                 <MudText Typo="Typo.h6">Win Rate</MudText>
                                 @if (ViewModel.WeekChartData.Any())
                                 {
-                                    <RadzenChart>
-                                        <RadzenLineSeries Smooth="true" Data="@ViewModel.WeekChartData" CategoryProperty="Date" Title="Win Rate" ValueProperty="WinRate">
-                                            <RadzenMarkers MarkerType="MarkerType.Circle"/>
-                                            <RadzenSeriesDataLabels Visible="false"/>
-                                        </RadzenLineSeries>
-                                        <RadzenCategoryAxis>
-                                            <RadzenAxisTitle Text="Week number"/>
-                                        </RadzenCategoryAxis>
-                                        <RadzenValueAxis Formatter="@ViewModel.FormatAsPercentage">
-                                            <RadzenGridLines Visible="true"/>
-                                            <RadzenAxisTitle Text="Win Rate (%)"/>
-                                        </RadzenValueAxis>
-                                        <RadzenLegend Visible="false"/>
-                                    </RadzenChart>
+                                    <WeekChart Data="ViewModel.WeekChartData"></WeekChart>
                                 }
                             </MudPaper>
                         </MudItem>
