--- a/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
+++ b/BoyumFoosballStats/Pages/PlayerDashboard/PlayerDashboard.razor
@@ -26,47 +26,10 @@
                 </MudPaper>
             </MudItem>
         }
-
         <MudItem xs="@ViewModel.RankingsColumnXs" lg="@ViewModel.RankingsColumnLg">
             @if (ViewModel.Players.Any())
             {
-                <MudTable T="Player" RowClass="cursor-pointer" Items="@ViewModel.Players" OnRowClick="ViewModel.HandlePlayerClicked" Class="mud--theme-dark pt-8 px-0 px-md-8 rounded-lg" Elevation="5" Striped="true" Bordered="false" Outlined="false" Hover="true" Breakpoint="Breakpoint.None">
-                    <ToolBarContent>
-                        <MudText Typo="Typo.h4" Class="mb-8">Player rankings</MudText>
-                    </ToolBarContent>
-                    <ColGroup>
-                        <col style="width: 60px;"/>
-                        <col/>
-                        <col/>
-                        <col/>
-                    </ColGroup>
-                    <HeaderContent>
-                        <MudTh>#</MudTh>
-                        <MudTh>Players</MudTh>
-                        <MudTh>TrueSkill</MudTh>
-                        <MudTh>Games</MudTh>
-                    </HeaderContent>
-                    <RowTemplate>
-                        <MudTd>@ViewModel.GetRankingNumber(context)</MudTd>
-                        <MudTd DataLabel="Name">@context.Name</MudTd>
-                        <MudTd DataLabel="TrueSkillRating">
-                            <div class="d-flex align-center">
-                                <MudText Inline="true">@context.TrueSkillRating?.Mean.ToString("N")</MudText>
-                                <MudProgressLinear Style="max-width: 150px" Color="Color.Success" Rounded="true" Size="Size.Medium" Value="@((double)context.TrueSkillRating?.Mean!)" Min="ViewModel.MinTrueSkill" Max="ViewModel.MaxTrueSkill" Class="ml-3 d-none d-sm-inline-block"/>
-                            </div>
-                        </MudTd>
-                        <MudTd DataLabel="MatchesPlayed">
-
-                            <div class="d-flex align-center">
-                                <MudText Inline="true">@context.MatchesPlayed</MudText>
-                                <MudProgressLinear Style="max-width: 150px" Color="Color.Warning" Rounded="true" Size="Size.Medium" Value="@((double)context.MatchesPlayed!)" Min="ViewModel.MinGames" Max="ViewModel.MaxGames" Class="ml-3 d-none d-sm-inline-block"/>
-                            </div>
-                        </MudTd>
-                    </RowTemplate>
-                    <PagerContent>
-                        <MudTablePager HideRowsPerPage="true" HidePageNumber="true" HorizontalAlignment="HorizontalAlignment.End"/>
-                    </PagerContent>
-                </MudTable>
+                <PlayerRankingsTable Players="@ViewModel.Players" SelectedPlayer="ViewModel.SelectedPlayer" SelectedPlayerChanged="ViewModel.HandlePlayerClicked"/>
             }
         </MudItem>
     </MudGrid>
