--- a/BoyumFoosballStats/_Imports.razor
+++ b/BoyumFoosballStats/_Imports.razor
@@ -15,3 +15,4 @@
 @using Variant = MudBlazor.Variant
 @using BoyumFoosballStats.Components.Charts
 @using BoyumFoosballStats.Components.TeamCard
+@using BoyumFoosballStats.Components.PlayerRankingsTable
