--- a/BoyumFoosballStats/_Imports.razor
+++ b/BoyumFoosballStats/_Imports.razor
@@ -16,3 +16,4 @@
 @using BoyumFoosballStats.Components.Charts
 @using BoyumFoosballStats.Components.TeamCard
 @using BoyumFoosballStats.Components.PlayerRankingsTable
+@using BoyumFoosballStats.Components.PlayerCard
