--- a/BoyumFoosballStats/_Imports.razor
+++ b/BoyumFoosballStats/_Imports.razor
@@ -17,3 +17,4 @@
 @using BoyumFoosballStats.Components.TeamCard
 @using BoyumFoosballStats.Components.PlayerRankingsTable
 @using BoyumFoosballStats.Components.PlayerCard
+@using BoyumFoosballStats.Components.Charts.Models
