--- a/BoyumFoosballStats/Components/Charts/WinRateChart.razor
+++ b/BoyumFoosballStats/Components/Charts/WinRateChart.razor
@@ -1,14 +1,16 @@
-﻿<RadzenChart>
-    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="Date" Title="Win Rate" ValueProperty="WinRate">
+﻿@inherits ChartComponentBase
+
+<RadzenChart>
+    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Win Rate">
         <RadzenMarkers MarkerType="MarkerType.Circle"/>
         <RadzenSeriesDataLabels Visible="false"/>
     </RadzenLineSeries>
     <RadzenCategoryAxis>
-        <RadzenAxisTitle Text="Week number"/>
+        @* <RadzenAxisTitle Text="Week number"/> *@
     </RadzenCategoryAxis>
     <RadzenValueAxis Formatter="@FormatAsPercentage">
         <RadzenGridLines Visible="true"/>
-        <RadzenAxisTitle Text="Win Rate (%)"/>
+        @* <RadzenAxisTitle Text="Win Rate (%)"/> *@
     </RadzenValueAxis>
     <RadzenLegend Visible="false"/>
 </RadzenChart>
