--- a/BoyumFoosballStats/Shared/MainLayout.razor
+++ b/BoyumFoosballStats/Shared/MainLayout.razor
@@ -11,7 +11,7 @@
         <MudSpacer/>
         <MudIconButton Icon="@Icons.Material.Filled.MoreVert" Color="Color.Inherit" Edge="Edge.End"/>
     </MudAppBar>
-    <MudDrawer @bind-Open="_drawerOpen" Elevation="2">
+    <MudDrawer @bind-Open="_drawerOpen" Elevation="2" Breakpoint="Breakpoint.Lg">
         <MudDrawerHeader>
             <MudText Typo="Typo.h5">Foosball Stats</MudText>
         </MudDrawerHeader>
