Added the option of running against debug cosmos containers to avoid messing with live data

--- a/BoyumFoosballStats/Pages/OverviewDashboard/OverviewDashboard.razor
+++ b/BoyumFoosballStats/Pages/OverviewDashboard/OverviewDashboard.razor
@@ -2,12 +2,15 @@
 <MudContainer MaxWidth="MaxWidth.ExtraLarge" Class="mt-5">
     <MudGrid>
         <MudItem xs="12" Class="d-flex justify-center">
-            <MudSelect FullWidth="false"  T="string" Value="ViewModel.SelectedSeason" SelectedValuesChanged="ViewModel.SeasonChanged" Clearable="true" Placeholder="All time">
-                @foreach (var season in ViewModel.AvailableSeasons)
-                {
-                    <MudSelectItem T="string" Value="@season"></MudSelectItem>
-                }
-            </MudSelect>
+            @if (ViewModel.AvailableSeasons.Any())
+            {
+                <MudSelect FullWidth="false" T="string" Value="ViewModel.SelectedSeason" SelectedValuesChanged="ViewModel.SeasonChanged" Clearable="true" Placeholder="All time">
+                    @foreach (var season in ViewModel.AvailableSeasons)
+                    {
+                        <MudSelectItem T="string" Value="@season"></MudSelectItem>
+                    }
+                </MudSelect>
+            }
         </MudItem>
         <MudItem xs="12" lg="6">
             <MudPaper Elevation="3">
