--- a/BoyumFoosballStats/Components/Charts/WinRateByDayChart.razor
+++ b/BoyumFoosballStats/Components/Charts/WinRateByDayChart.razor
@@ -1,11 +1,12 @@
 ﻿@inherits ChartComponentBase
 
+
 <RadzenChart>
-    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)">
+    <RadzenColumnSeries Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Something">
         <RadzenMarkers MarkerType="MarkerType.Circle"/>
         <RadzenSeriesDataLabels Visible="false"/>
-    </RadzenLineSeries>
-    <RadzenValueAxis >
+    </RadzenColumnSeries>
+    <RadzenValueAxis Formatter="@FormatAsPercentage">
         <RadzenGridLines Visible="true"/>
     </RadzenValueAxis>
     <RadzenLegend Visible="false"/>
