--- a/BoyumFoosballStats/Components/Charts/WinRateByWeekChart.razor
+++ b/BoyumFoosballStats/Components/Charts/WinRateByWeekChart.razor
@@ -1,16 +1,12 @@
 ﻿@inherits ChartComponentBase
 
 <RadzenChart>
-    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Win Rate">
+    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)">
         <RadzenMarkers MarkerType="MarkerType.Circle"/>
         <RadzenSeriesDataLabels Visible="false"/>
     </RadzenLineSeries>
-    <RadzenCategoryAxis>
-        @* <RadzenAxisTitle Text="Week number"/> *@
-    </RadzenCategoryAxis>
     <RadzenValueAxis Formatter="@FormatAsPercentage">
         <RadzenGridLines Visible="true"/>
-        @* <RadzenAxisTitle Text="Win Rate (%)"/> *@
     </RadzenValueAxis>
     <RadzenLegend Visible="false"/>
 </RadzenChart>
