show selected player in table

--- a/BoyumFoosballStats/Components/Charts/MatchesPlayedChart.razor
+++ b/BoyumFoosballStats/Components/Charts/MatchesPlayedChart.razor
@@ -1,7 +1,7 @@
 ﻿@inherits ChartComponentBase
 
 <RadzenChart>
-    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)">
+    <RadzenLineSeries Smooth="true" Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Matches">
         <RadzenMarkers MarkerType="MarkerType.Circle"/>
         <RadzenSeriesDataLabels Visible="false"/>
     </RadzenLineSeries>
