--- a/BoyumFoosballStats/Components/Charts/WinRateByDayChart.razor
+++ b/BoyumFoosballStats/Components/Charts/WinRateByDayChart.razor
@@ -2,7 +2,7 @@
 
 
 <RadzenChart>
-    <RadzenColumnSeries Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Something">
+    <RadzenColumnSeries Data="Data" CategoryProperty="@nameof(ChartDataItem.XData)" ValueProperty="@nameof(ChartDataItem.YData)" Title="Win Rate">
         <RadzenMarkers MarkerType="MarkerType.Circle"/>
         <RadzenSeriesDataLabels Visible="false"/>
     </RadzenColumnSeries>
