--- a/BoyumFoosballStats/wwwroot/css/site.css
+++ b/BoyumFoosballStats/wwwroot/css/site.css
@@ -279,3 +279,11 @@ px-4 {
     }
 }
 
+.row-selected {
+    background-color: var(--mud-palette-table-striped);
+}
+
+.row-selected:hover {
+    background-color: rgba(255, 255, 255, 0.3) !important;
+}
+
